# =============================================================================
# ol_hwkey_wasm  -  WASM bindings for One Link's hardware-bound TOFU store
# =============================================================================
#
# Wraps the production ol_hwkey crate (specifically the TofuStore software
# fallback) so the browser can demonstrate the "Trust On First Use" guarantee:
# first visit registers a 32-byte device pubkey, second visit recognises it,
# any attempt to present a different pubkey under the same label gets rejected
# in constant time.
#
# Note: the browser has no real hardware key store. On a real device the
# daemon would back this with Secure Enclave / StrongBox / TPM. The TOFU
# fallback is the always-available baseline.
#
# License: AGPL-3.0-or-later
# =============================================================================

[package]
name        = "ol_hwkey_wasm"
version     = "0.21.0-alpha.0"
edition     = "2021"
publish     = false
license     = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ol_hwkey  = { path = "../../../../Coherence/One_link/native/ol_hwkey" }

getrandom = { version = "0.2", features = ["js"] }

wasm-bindgen     = "=0.2.100"
js-sys           = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
hex              = { workspace = true }

[features]
default     = ["debug-panic"]
debug-panic = ["dep:console_error_panic_hook"]
