# =============================================================================
# ol_pqkem_wasm  -  WASM bindings for One Link PQ-hybrid KEM
# =============================================================================
#
# Wraps the production ol_pqkem crate so the browser-side session handshake
# can do a real X25519 + ML-KEM-768 hybrid KEM with the relay, byte-identical
# to what the daemon would negotiate.
#
# License: AGPL-3.0-or-later
# =============================================================================

[package]
name        = "ol_pqkem_wasm"
version     = "0.21.0-alpha.0"
edition     = "2021"
publish     = false
license     = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ol_pqkem  = { path = "../../../../Coherence/One_link/native/ol_pqkem" }

rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
zeroize   = { workspace = true }

wasm-bindgen     = "=0.2.95"
js-sys           = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
hex              = { workspace = true }

[features]
default     = ["debug-panic"]
debug-panic = ["dep:console_error_panic_hook"]
